more swagger docs2
